--- a/index.html
+++ b/index.html
@@ -339,6 +339,52 @@
           </article>
         </div>
       </section>
+    
+      <section id="cta" class="section">
+        <div class="section-header">
+          <div class="section-title">Work with MBCC on Agent-Ops™</div>
+          <div class="section-subtitle">
+            Use these pages in calls, workshops, or internal pitches.
+          </div>
+        </div>
+        <div class="sim-grid">
+          <article class="sim-card">
+            <header>
+              <div>
+                <div class="sim-title">Sales Page</div>
+                <div class="sim-meta">A narrative page you can send to decision-makers.</div>
+              </div>
+            </header>
+            <div class="sim-body">
+              <p style="font-size:13px; color:rgba(247,243,233,0.88);">
+                The sales page frames Agent-Ops™ as a capability, not a one-off tool.
+                It walks through pains, outcomes, and engagement lanes in executive language.
+              </p>
+              <div class="btn-row">
+                <a class="btn-primary" href="sales.html">Open Sales Page</a>
+              </div>
+            </div>
+          </article>
+          <article class="sim-card">
+            <header>
+              <div>
+                <div class="sim-title">Proposal Generator</div>
+                <div class="sim-meta">Turn discovery into a scoped engagement in minutes.</div>
+              </div>
+            </header>
+            <div class="sim-body">
+              <p style="font-size:13px; color:rgba(247,243,233,0.88);">
+                Capture client context, use cases, and constraints, then generate a structured
+                Agent-Ops™ proposal draft you can refine, price, and send.
+              </p>
+              <div class="btn-row">
+                <a class="btn-primary" href="proposal.html">Open Proposal Generator</a>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+
     </main>
 
     <footer class="mbcc-footer">
