--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@
         if (i === 0) {
           text += 'Ingest context, constraints, and success metrics from stakeholders.\n';
         } else if (i === steps - 1) {
-          text += 'Validate outcomes, capture lessons learned, and log a replayable trace for future runs.\n`;
+          text += 'Validate outcomes, capture lessons learned, and log a replayable trace for future runs.\n';
         } else {
           text += 'Transform inputs into the next artifact in the chain (docs, tickets, configs, or actions).\n';
         }
