--- a/index.html
+++ b/index.html
@@ -626,6 +626,19 @@
       transform: translateY(-1px);
     }
 
+
+    .paypal-form {
+      display: inline-block;
+      margin-left: 4px;
+      margin-top: 4px;
+    }
+
+
+    .pricing-cta:hover {
+      box-shadow: 0 8px 20px rgba(0,0,0,0.9);
+      transform: translateY(-1px);
+    }
+
     .pricing-badge {
       position: absolute;
       top: 6px;
@@ -987,9 +1000,17 @@
                   <li>Architecture sketch + next-phase roadmap.</li>
                   <li>Live workshop sessions with stakeholders.</li>
                 </ul>
-                <button class="pricing-cta" type="button">
+                <a class="pricing-cta" href="mailto:moeknowmoe24@gmail.com?subject=Agent-Ops%20Sprint%20Inquiry" role="button">
                   Start Agent-Ops Sprint
-                </button>
+                </a>
+                <form class="paypal-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                  <input type="hidden" name="cmd" value="_xclick">
+                  <input type="hidden" name="business" value="moeknowmoe24@gmail.com">
+                  <input type="hidden" name="item_name" value="Agent-Ops Sprint">
+                  <input type="hidden" name="amount" value="2500.00">
+                  <input type="hidden" name="currency_code" value="USD">
+                  <button type="submit" class="pricing-cta">Pay with PayPal</button>
+                </form>
               </div>
 
               <div class="pricing-card">
@@ -1003,9 +1024,17 @@
                   <li>Runbooks and dashboards for AI, security, and ops.</li>
                   <li>Rollout plan for multiple teams and use cases.</li>
                 </ul>
-                <button class="pricing-cta" type="button">
+                <a class="pricing-cta" href="mailto:moeknowmoe24@gmail.com?subject=Agent-Ops%20Platform%20Build%20Inquiry" role="button">
                   Request Platform Build
-                </button>
+                </a>
+                <form class="paypal-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                  <input type="hidden" name="cmd" value="_xclick">
+                  <input type="hidden" name="business" value="moeknowmoe24@gmail.com">
+                  <input type="hidden" name="item_name" value="Agent-Ops Platform Build">
+                  <input type="hidden" name="amount" value="15000.00">
+                  <input type="hidden" name="currency_code" value="USD">
+                  <button type="submit" class="pricing-cta">Pay with PayPal</button>
+                </form>
               </div>
 
               <div class="pricing-card">
@@ -1018,9 +1047,17 @@
                   <li>Reference architectures, playbooks, and operating model.</li>
                   <li>Ongoing advisory on roadmaps, risks, and new use cases.</li>
                 </ul>
-                <button class="pricing-cta" type="button">
+                <a class="pricing-cta" href="mailto:moeknowmoe24@gmail.com?subject=Enterprise%20Agent-Ops%20Partnership" role="button">
                   Become an Enterprise Partner
-                </button>
+                </a>
+                <form class="paypal-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                  <input type="hidden" name="cmd" value="_xclick">
+                  <input type="hidden" name="business" value="moeknowmoe24@gmail.com">
+                  <input type="hidden" name="item_name" value="Enterprise Agent-Ops (VCDL-A Partner)">
+                  <input type="hidden" name="amount" value="150000.00">
+                  <input type="hidden" name="currency_code" value="USD">
+                  <button type="submit" class="pricing-cta">Pay with PayPal</button>
+                </form>
               </div>
             </div>
           </div>
