--- a/index.html
+++ b/index.html
@@ -1007,9 +1007,9 @@
                   <input type="hidden" name="cmd" value="_xclick">
                   <input type="hidden" name="business" value="moeknowmoe24@gmail.com">
                   <input type="hidden" name="item_name" value="Agent-Ops Sprint">
-                  <input type="hidden" name="amount" value="2500.00">
+                  <input type="hidden" name="amount" value="500.00">
                   <input type="hidden" name="currency_code" value="USD">
-                  <button type="submit" class="pricing-cta">Pay with PayPal</button>
+                  <button type="submit" class="pricing-cta">Pay $500 Deposit</button>
                 </form>
               </div>
 
@@ -1031,9 +1031,9 @@
                   <input type="hidden" name="cmd" value="_xclick">
                   <input type="hidden" name="business" value="moeknowmoe24@gmail.com">
                   <input type="hidden" name="item_name" value="Agent-Ops Platform Build">
-                  <input type="hidden" name="amount" value="15000.00">
+                  <input type="hidden" name="amount" value="2500.00">
                   <input type="hidden" name="currency_code" value="USD">
-                  <button type="submit" class="pricing-cta">Pay with PayPal</button>
+                  <button type="submit" class="pricing-cta">Pay $2,500 Deposit</button>
                 </form>
               </div>
 
@@ -1054,9 +1054,9 @@
                   <input type="hidden" name="cmd" value="_xclick">
                   <input type="hidden" name="business" value="moeknowmoe24@gmail.com">
                   <input type="hidden" name="item_name" value="Enterprise Agent-Ops (VCDL-A Partner)">
-                  <input type="hidden" name="amount" value="150000.00">
+                  <input type="hidden" name="amount" value="10000.00">
                   <input type="hidden" name="currency_code" value="USD">
-                  <button type="submit" class="pricing-cta">Pay with PayPal</button>
+                  <button type="submit" class="pricing-cta">Pay $10,000 Deposit</button>
                 </form>
               </div>
             </div>
