--- a/index.html
+++ b/index.html
@@ -993,6 +993,9 @@
                 <h4>Agent-Ops Sprint</h4>
                 <div class="pricing-price">$2,500–$5,000</div>
                 <div class="pricing-tagline">4–6 week focused sprint to prove one high-value agent use case.</div>
+                <p class="muted" style="font-size:0.72rem; margin:4px 0 6px; color:#d4cabc;">
+                  Deposit secures your project slot. Remaining balance is invoiced via contract milestones.
+                </p>
                 <ul>
                   <li>Blueprint 1–2 critical agent use cases.</li>
                   <li>Design a production-grade multi-agent chain.</li>
@@ -1018,6 +1021,9 @@
                 <h4>Agent-Ops Platform Build</h4>
                 <div class="pricing-price">$15,000–$50,000</div>
                 <div class="pricing-tagline">From experiments to a reusable Agent-Ops platform on your stack.</div>
+                <p class="muted" style="font-size:0.72rem; margin:4px 0 6px; color:#d4cabc;">
+                  Deposit secures your project slot. Remaining balance is invoiced via contract milestones.
+                </p>
                 <ul>
                   <li>Hardened multi-agent architecture on Google Cloud / Vertex AI.</li>
                   <li>Guardrails, observability, and secrets wired in.</li>
@@ -1041,6 +1047,9 @@
                 <h4>Enterprise Agent-Ops (VCDL-A Partner)</h4>
                 <div class="pricing-price">$150K+</div>
                 <div class="pricing-tagline">Full enterprise capability built around your data, teams, and risk profile.</div>
+                <p class="muted" style="font-size:0.72rem; margin:4px 0 6px; color:#d4cabc;">
+                  Deposit secures your project slot. Remaining balance is invoiced via contract milestones.
+                </p>
                 <ul>
                   <li>Agent-Ops as a strategic capability across departments.</li>
                   <li>Executive enablement and internal VCDL-A training.</li>
